Update source file list in *_META.yml
Signed-off-by: Pravek Sharma <sharmapravek@gmail.com>

--- a/ML-KEM-1024_META.yml
+++ b/ML-KEM-1024_META.yml
@@ -27,7 +27,7 @@ implementations:
     signature_keypair: ml_kem_1024_cupqc_keypair
     signature_enc: ml_kem_1024_cupqc_enc
     signature_dec: ml_kem_1024_cupqc_dec
-    sources:
+    sources: cupqc_ml-kem.cu
     supported_platforms:
       - architecture: CUDA
         operating_systems:
