--- a/ML-KEM-512_META.yml
+++ b/ML-KEM-512_META.yml
@@ -21,7 +21,7 @@ auxiliary-submitters:
   - Gregor Seiler
   - Damien Stehlé
 implementations:
-  - name: cupqc
+  - name: cuda
     version: FIPS203
     compile_opts: $<$<COMPILE_LANGUAGE:CUDA>:-rdc=true -dlto -arch=compute_70>
     signature_keypair: ml_kem_512_cupqc_keypair
