--- a/ML-KEM-1024_META.yml
+++ b/ML-KEM-1024_META.yml
@@ -24,9 +24,9 @@ implementations:
   - name: cuda
     version: FIPS203
     compile_opts: $<$<COMPILE_LANGUAGE:CUDA>:-rdc=true -dlto -arch=compute_70>
-    signature_keypair: ml_kem_1024_cupqc_keypair
-    signature_enc: ml_kem_1024_cupqc_enc
-    signature_dec: ml_kem_1024_cupqc_dec
+    signature_keypair: cupqc_ml_kem_1024_keypair
+    signature_enc: cupqc_ml_kem_1024_enc
+    signature_dec: cupqc_ml_kem_1024_dec
     sources: cupqc_ml-kem.cu
     supported_platforms:
       - architecture: CUDA
